--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="move_color">#D005E7</color>
+    <color name="main_color">#212121</color>
+    <color name="sec_main_color">#2D2D2D</color>
+    <color name="text_color">#7E7E7E</color>
+    <color name="dark_move_color">#6D10F2</color>
 </resources>
