--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,7 +15,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@color/main_color">
 
             <TextView
                 android:id="@+id/locationName"
@@ -23,6 +24,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/alexandria_bold"
+                android:textColor="@color/white"
                 android:text="EGYPT"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -35,6 +37,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="16.10.2015"
+                android:textColor="@color/text_color"
                 app:layout_constraintEnd_toEndOf="@+id/locationName"
                 app:layout_constraintHorizontal_bias="0.454"
                 app:layout_constraintStart_toStartOf="@+id/locationName"
@@ -49,18 +52,19 @@
                 android:layout_marginEnd="32dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView4">
+                app:layout_constraintTop_toBottomOf="@+id/textView4"
+                app:cardCornerRadius="100dp">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/move_color">
+                    android:background="@color/dark_move_color">
 
                     <TextView
                         android:id="@+id/weatherCondition"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
+                        android:layout_marginTop="16dp"
                         android:fontFamily="@font/alexandria_extralight"
                         android:text="Clear Sky"
                         android:textColor="@color/white"
@@ -78,9 +82,8 @@
                         android:text="16"
                         android:textColor="@color/white"
                         android:textSize="70sp"
-                        app:layout_constraintEnd_toEndOf="@+id/weatherCondition"
-                        app:layout_constraintHorizontal_bias="1.0"
-                        app:layout_constraintStart_toStartOf="@+id/weatherCondition"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/weatherCondition" />
 
                     <TextView
@@ -95,8 +98,32 @@
                         android:textSize="35sp"
                         app:layout_constraintStart_toEndOf="@+id/tempValue"
                         app:layout_constraintTop_toBottomOf="@+id/weatherCondition" />
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </com.google.android.material.card.MaterialCardView>
+
+            <ImageView
+                android:id="@+id/weatherImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="200dp"
+                android:src="@drawable/ic_sunnycloudy"
+                app:layout_constraintEnd_toEndOf="@+id/card"
+                app:layout_constraintHorizontal_bias="0.487"
+                app:layout_constraintStart_toStartOf="@+id/card"
+                app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/hourlyRV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:orientation="horizontal"
+                tools:listitem="@layout/item_hourly_weather"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.501"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/weatherImage" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
