home page working but only online

--- a/app/src/main/res/layout/item_hourly_weather.xml
+++ b/app/src/main/res/layout/item_hourly_weather.xml
@@ -9,6 +9,10 @@
         android:id="@+id/card"
         android:layout_width="90dp"
         android:layout_height="150dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@color/sec_main_color"
+        app:strokeColor="@color/sec_main_color"
         app:cardCornerRadius="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -18,8 +22,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/sec_main_color"
-            >
+            android:background="@color/sec_main_color">
 
             <TextView
                 android:id="@+id/hourTxt"
@@ -48,8 +51,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="17 C"
-                android:textSize="17sp"
                 android:textColor="@color/white"
+                android:textSize="17sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/hourWeatherImage" />
