--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -32,7 +32,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/dateTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -52,7 +52,7 @@
                 android:layout_marginEnd="32dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView4"
+                app:layout_constraintTop_toBottomOf="@+id/dateTxt"
                 app:cardCornerRadius="100dp">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -75,7 +75,7 @@
 
                     <TextView
                         android:id="@+id/tempValue"
-                        android:layout_width="82dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="109dp"
                         android:layout_marginTop="8dp"
                         android:fontFamily="@font/alexandria_bold"
@@ -111,7 +111,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/card"
                 app:layout_constraintHorizontal_bias="0.487"
                 app:layout_constraintStart_toStartOf="@+id/card"
-                app:layout_constraintTop_toBottomOf="@+id/textView4" />
+                app:layout_constraintTop_toBottomOf="@+id/dateTxt" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/hourlyRV"
@@ -124,6 +124,25 @@
                 app:layout_constraintHorizontal_bias="0.501"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/weatherImage" />
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/weatherDetailsCard"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="32dp"
+                app:strokeColor="@color/sec_main_color"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/hourlyRV"
+                app:cardCornerRadius="30dp">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/sec_main_color"/>
+            </com.google.android.material.card.MaterialCardView>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
