--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.weather.HomeFragment"
+        android:name="com.example.weather.Home.view.HomeFragment"
         android:label="@string/Home"
         tools:layout="@layout/fragment_home" />
     <fragment
