--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,12 +9,27 @@
         android:id="@+id/homeFragment"
         android:name="com.example.weather.Home.view.HomeFragment"
         android:label="@string/Home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <argument android:name="lon"
+            app:argType="float"
+            android:defaultValue="-1.0" />
+        <argument
+            android:name="lat"
+            app:argType="float"
+            android:defaultValue="-1.0" />
+    </fragment>
     <fragment
         android:id="@+id/favoriteFragment"
-        android:name="com.example.weather.FavoriteFragment"
+        android:name="com.example.weather.Favorite.FavoriteFragment"
         android:label="@string/Favorite"
-        tools:layout="@layout/fragment_favorite" />
+        tools:layout="@layout/fragment_favorite" >
+        <action
+            android:id="@+id/action_favoriteFragment_to_mapFragment"
+            app:destination="@id/mapFragment" />
+        <action
+            android:id="@+id/action_favoriteFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
     <fragment
         android:id="@+id/alertsFragment"
         android:name="com.example.weather.AlertsFragment"
@@ -25,4 +40,16 @@
         android:name="com.example.weather.SettingsFragment"
         android:label="@string/Settings"
         tools:layout="@layout/fragment_settings" />
+    <fragment
+        android:id="@+id/mapFragment"
+        android:name="com.example.weather.MapFragment"
+        android:label="fragment_map"
+        tools:layout="@layout/fragment_map" >
+        <argument
+            android:name="page"
+            app:argType="string"/>
+        <action
+            android:id="@+id/action_mapFragment_to_favoriteFragment"
+            app:destination="@id/favoriteFragment" />
+    </fragment>
 </navigation>
