alert is working but its not deleting un used alets

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -32,7 +32,7 @@
     </fragment>
     <fragment
         android:id="@+id/alertsFragment"
-        android:name="com.example.weather.AlertsFragment"
+        android:name="com.example.weather.Alerts.AlertsFragment"
         android:label="@string/Alerts"
         tools:layout="@layout/fragment_alerts" />
     <fragment
