--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_color"
-    tools:context=".Favorite.FavoriteFragment">
+    tools:context=".Favorite.view.FavoriteFragment">
 
     <!-- Other UI elements for FavoriteFragment -->
 
