--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -46,14 +46,15 @@
             android:text="@string/GPS"
             android:textColor="@color/white"/>
     </RadioGroup>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/SelectMode"
+        android:text="@string/units"
         android:textColor="@color/white" />
 
     <RadioGroup
-        android:id="@+id/mode_radio_group"
+        android:id="@+id/unit_radio_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -62,20 +63,21 @@
             android:id="@+id/cel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/Map"
-            android:textColor="@color/white"/>
+            android:text="@string/Celisus"
+            android:textColor="@color/white" />
 
         <RadioButton
             android:id="@+id/kel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/GPS"
-            android:textColor="@color/white"/>
+            android:text="@string/kelvin"
+            android:textColor="@color/white" />
+
         <RadioButton
             android:id="@+id/feh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/GPS"
-            android:textColor="@color/white"/>
+            android:text="@string/fahrenheit"
+            android:textColor="@color/white" />
     </RadioGroup>
 </LinearLayout>
