--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -80,4 +80,30 @@
             android:text="@string/fahrenheit"
             android:textColor="@color/white" />
     </RadioGroup>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/units"
+        android:textColor="@color/white" />
+
+    <RadioGroup
+        android:id="@+id/mile_radio_group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/meter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/meter"
+            android:textColor="@color/white" />
+
+        <RadioButton
+            android:id="@+id/mile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/mile"
+            android:textColor="@color/white" />
+    </RadioGroup>
 </LinearLayout>
